--- a/.env
+++ b/.env
@@ -3,7 +3,6 @@ APP_ENV=local
 APP_KEY=base64:GjNHAylZOMnDu+U/fe4tiZSjBu9Cklbj7VBgMiME1MY=
 APP_DEBUG=true
 APP_URL=http://localhost
-CENTRAL_DOMAIN=localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -28,7 +27,7 @@ DB_DATABASE=wst_saas
 DB_USERNAME=james
 DB_PASSWORD=123123123
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
