--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=WST-Saas
 APP_ENV=local
 APP_KEY=base64:GjNHAylZOMnDu+U/fe4tiZSjBu9Cklbj7VBgMiME1MY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://my-central-app
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
