--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "owen-it/laravel-auditing": "^14.0",
         "stancl/tenancy": "^3.9"
     },
     "require-dev": {
