--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:GjNHAylZOMnDu+U/fe4tiZSjBu9Cklbj7VBgMiME1MY=
 APP_DEBUG=true
 APP_URL=http://my-central-app
 
+HTTP_KERNEL=App\Http\Kernel
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
