--- a/.env
+++ b/.env
@@ -4,11 +4,14 @@ APP_KEY=base64:GjNHAylZOMnDu+U/fe4tiZSjBu9Cklbj7VBgMiME1MY=
 APP_DEBUG=true
 APP_URL=http://my-central-app
 
-HTTP_KERNEL=App\Http\Kernel
-
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+
+GOOGLE_CLIENT_ID=915541097349-0tsld0qt1nt03npno0040kcjoj1cg1u2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://gaisano.127.0.0.1.nip.io:8000/google/callback
+
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
